--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "postbuild": "next-sitemap && node scripts/generate-project-sitemap.js"
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
